Adding registration and login + require to login before access specific page if necessary

--- a/WebApplication1/WebApplication1/Views/Ksiazki/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Ksiazki/Index.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.Strony)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ID_Aktora)
+            @Html.DisplayNameFor(model => model.ID_Autora)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Autor.Imie)
