--- a/WebApplication1/WebApplication1/Views/Konta/Register.cshtml
+++ b/WebApplication1/WebApplication1/Views/Konta/Register.cshtml
@@ -1,10 +1,10 @@
 ﻿@model WebApplication1.Models.Czytelnik
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Register";
 }
 
-<h2>Create</h2>
+<h2>Register</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Czytelnik</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -32,7 +31,7 @@
         </div>
 
         <div class="form-group">
-            @Html.Label("Login", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Nazwa Użytkownika", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Uzytkownik, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Uzytkownik, "", new { @class = "text-danger" })
@@ -42,7 +41,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Haslo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Haslo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.PasswordFor(model => model.Haslo, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Haslo, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -57,15 +56,11 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Register" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
