Tweaking Czytelnicy Edit Form

--- a/WebApplication1/WebApplication1/Views/Konta/Dashboard.cshtml
+++ b/WebApplication1/WebApplication1/Views/Konta/Dashboard.cshtml
@@ -15,7 +15,7 @@
                    @Html.ActionLink("Edytuj Profil", "Edit", "Czytelnicy", new { id = Session["UserID"] }, null)
                </li>
                <li>
-                   @Html.ActionLink("Wyloguj", "Edit", "Czytelnicy", new { }, null)
+                   @Html.ActionLink("Wyloguj", "Logout", "Konta", new { }, null)
                </li>
            </ul>
        </td>
