--- a/WebApplication1/WebApplication1/Views/Wiadomosci/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Wiadomosci/Index.cshtml
@@ -29,9 +29,7 @@
             @Html.DisplayFor(modelItem => item.Czytelnik.Imie)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Details", "Details", new { id=item.ID })
         </td>
     </tr>
 }
