--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -27,8 +27,11 @@
                         string loggedin = HttpContext.Current.User.Identity.Name;
                         if (!string.IsNullOrEmpty(loggedin))
                         {
-                            <li> @Html.ActionLink("Zarządzaj","Dashboard", "Konta")</li>
-
+                            <li> @Html.ActionLink("Zarządzaj", "Dashboard", "Konta")</li>
+                        }
+                        else
+                        {
+                            <li> @Html.ActionLink("Zaloguj się", "Login", "Konta")</li>
                         }
 
 
