Fixing Rider problems

--- a/WebApplication1/WebApplication1/Views/Konta/Dashboard.cshtml
+++ b/WebApplication1/WebApplication1/Views/Konta/Dashboard.cshtml
@@ -42,7 +42,7 @@
                             @Html.ActionLink("Zarządzaj Pracami Naukowymi", "Index", "Prace_Naukowe", new { }, null)
                         </li>
                         <li>
-                            @Html.ActionLink("Zarządzaj Słowami Kluczowymi", "Index", "Słowa_Kluczowe", new { }, null)
+                            @Html.ActionLink("Zarządzaj Słowami Kluczowymi", "Index", "Slowa_Kluczowe", new { }, null)
                         </li>
                         <li>
                             @Html.ActionLink("Zarządzaj Autorami", "Index", "Autorzy", new { }, null)
