--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    @{
+                    <li>@{
                         string loggedin = HttpContext.Current.User.Identity.Name;
                         if (!string.IsNullOrEmpty(loggedin))
                         {
@@ -35,7 +35,19 @@
                         }
 
 
-                     }
+                        }
+                    </li>
+                    <li>
+                        @using (Html.BeginForm("Search", "Ksiazki"))
+                        {
+                            <p>
+                                Search Books: @Html.TextBox("SearchText", ViewBag.FilterValue as string)
+                                <input type="submit" value="Szukaj"
+                                       />
+                            </p>
+                        }
+                    </li>
+                    
                 </ul>
             </div>
         </div>
