--- a/WebApplication1/WebApplication1/Views/Koszyk/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Koszyk/Index.cshtml
@@ -15,16 +15,16 @@
 <table class="table">
     <tr>
         <th>
-            @Html.LabelFor(x => x[0].tytul)
+            @Html.Label("Tytuł")
         </th>
         <th>
-            @Html.LabelFor(x => x[0].ilosc)
+            @Html.Label("Ilość")
         </th>
         <th>
-            @Html.LabelFor(x => x[0].data_wypozyczenia)
+            @Html.Label("Data Wypożyczenia")
         </th>
         <th>
-            @Html.LabelFor(x => x[0].data_zwrotu)
+            @Html.Label("Data Zwrotu")
         </th>
         <th></th>
     </tr>
