--- a/WebApplication1/WebApplication1/Views/Czytelnicy/Delete.cshtml
+++ b/WebApplication1/WebApplication1/Views/Czytelnicy/Delete.cshtml
@@ -4,15 +4,14 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Usuń Czytelnika</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Czy napewno chcesz usunąć tę pozycję?</h3>
 <div>
-    <h4>Czytelnik</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Imie)
+            @Html.DisplayName("Imię")
         </dt>
 
         <dd>
@@ -20,7 +19,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Nazwisko)
+            @Html.DisplayName("Nazwisko")
         </dt>
 
         <dd>
@@ -28,7 +27,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Uzytkownik)
+            @Html.DisplayName("Login")
         </dt>
 
         <dd>
@@ -36,15 +35,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Haslo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Haslo)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
+            @Html.DisplayName("Email")
         </dt>
 
         <dd>
@@ -58,7 +49,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Wróc do listy", "Index")
         </div>
     }
 </div>
