--- a/WebApplication1/WebApplication1/Views/Czytelnicy/Edit.cshtml
+++ b/WebApplication1/WebApplication1/Views/Czytelnicy/Edit.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Edytuj</h2>
 
 
 @using (Html.BeginForm())
@@ -19,7 +19,7 @@
     @Html.HiddenFor(model => model.ID)
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Imie, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Imię", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Imie, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Imie, "", new { @class = "text-danger" })
@@ -27,7 +27,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Nazwisko, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Nazwisko", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Nazwisko, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Nazwisko, "", new { @class = "text-danger" })
@@ -35,7 +35,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Uzytkownik, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Login", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Uzytkownik, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Uzytkownik, "", new { @class = "text-danger" })
@@ -43,7 +43,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Haslo, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Hasło", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Haslo, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Haslo, "", new { @class = "text-danger" })
@@ -51,7 +51,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("E-Mail", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
@@ -59,7 +59,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Wazne, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Ważne", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @if (ViewBag.UserRole != null && ViewBag.UserRole >= 2)
             {
