--- a/WebApplication1/WebApplication1/Views/Ksiazki/Create.cshtml
+++ b/WebApplication1/WebApplication1/Views/Ksiazki/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Dodaj Nową książkę</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,11 +12,10 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Ksiazka</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Tytul, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Tytuł", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Tytul, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Tytul, "", new { @class = "text-danger" })
@@ -32,7 +31,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Strony, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Ilość Stron", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Strony, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Strony, "", new { @class = "text-danger" })
@@ -40,7 +39,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ID_Wydawcy, "ID_Wydawcy", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Wydawca", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ID_Wydawcy", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ID_Wydawcy, "", new { @class = "text-danger" })
@@ -48,23 +47,17 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ID_Autora, "ID_Autora", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Autor", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ID_Autora", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ID_Autora, "", new { @class = "text-danger" })
             </div>
         </div>
 
+        @Html.HiddenFor(model => model.ID_Aktora)
+        
         <div class="form-group">
-            @Html.LabelFor(model => model.ID_Aktora, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ID_Aktora, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ID_Aktora, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ID_Slowo_Kluczowe, "ID_Slowo_Kluczowe", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Słowo Kluczowe", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ID_Slowo_Kluczowe", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ID_Slowo_Kluczowe, "", new { @class = "text-danger" })
