--- a/WebApplication1/WebApplication1/Views/Ksiazki/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Ksiazki/Index.cshtml
@@ -11,32 +11,20 @@
     if (Int32.Parse(Session["UserRole"].ToString()) >= 1)
     {
         <p>
-            @Html.ActionLink("Create New", "Create")
+            @Html.ActionLink("Dodaj Nową Książkę", "Create")
         </p>
     }
 }
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Tytul)
+            @Html.DisplayName("Tytuł")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ISBN)
+            @Html.DisplayName("Imie Autora")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Strony)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ID_Autora)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Autor.Imie)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Slowo_Kluczowe.Slowo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Wydawca.Nazwa)
+            @Html.DisplayName("Nazwisko Autora")
         </th>
         <th></th>
     </tr>
@@ -48,32 +36,20 @@
             @Html.DisplayFor(modelItem => item.Tytul)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.ISBN)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Strony)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ID_Aktora)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Autor.Imie)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Slowo_Kluczowe.Slowo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Wydawca.Nazwa)
+            @Html.DisplayFor(modelItem => item.Autor.Nazwisko)
         </td>
         @if (Session["UserID"] != null && Session["UserRole"] != null)
     {
         if (Int32.Parse(Session["UserRole"].ToString()) >= 1)
         {
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.ID }) |
-                @Html.ActionLink("Dodaj do Koszyka","Add","Koszyk",new { id = item.ID, type = 0},null)
+                @Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Szczegóły", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Usuń", "Delete", new { id = item.ID }) |
+                @Html.ActionLink("Dodaj do Koszyka", "Add", "Koszyk", new { id = item.ID, type = 0 }, null)
             </td>
     }
 }
