--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -16,25 +16,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("BibliotekaMVC", "Index", "Ksiazki", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     @{
                         string loggedin = HttpContext.Current.User.Identity.Name;
                         if (!string.IsNullOrEmpty(loggedin))
                         {
+                            <li> @Html.ActionLink("Koszyk", "Index", "Koszyk")</li>
                             <li> @Html.ActionLink("Zarządzaj", "Dashboard", "Konta")</li>
                         }
                         else
                         {
                             <li> @Html.ActionLink("Zaloguj się", "Login", "Konta")</li>
                         }
-
-
                      }
                 </ul>
             </div>
@@ -44,7 +40,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>Sworzone przez Mateusz Butkiewicz, Mariusz Czernecki &copy; @DateTime.Now.Year</p>
         </footer>
     </div>
 
