--- a/WebApplication1/WebApplication1/Views/Czytelnicy/Details.cshtml
+++ b/WebApplication1/WebApplication1/Views/Czytelnicy/Details.cshtml
@@ -43,7 +43,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayName("Email")
+            @Html.DisplayName("E-Mail")
         </dt>
 
         <dd>
@@ -69,5 +69,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Wróc do listy", "Index")
+    @Html.ActionLink("Powrót do listy", "Index")
 </p>
