--- a/WebApplication1/WebApplication1/Views/Prace_Naukowe/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Prace_Naukowe/Index.cshtml
@@ -18,10 +18,13 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Tytul)
+            @Html.DisplayName("Tytuł")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Autor.Imie)
+            @Html.DisplayName("Autor")
+        </th>
+        <th>
+            @Html.DisplayName("Dostępne")
         </th>
         <th></th>
     </tr>
@@ -33,16 +36,20 @@
             @Html.DisplayFor(modelItem => item.Tytul)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Autor.Imie)
+            @Html.DisplayFor(modelItem => item.Autor.Imie)&nbsp;
+            @Html.DisplayFor(modelItem => item.Autor.Nazwisko)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Stan_Magazynowy)
         </td>
         @if (Session["UserID"] != null && Session["UserRole"] != null)
     {
         if (Int32.Parse(Session["UserRole"].ToString()) >= 1)
         {
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                @Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Szczegóły", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Usuń", "Delete", new { id = item.ID })
             </td>
     }
 }
