--- a/WebApplication1/WebApplication1/Views/Wiadomosci/Details.cshtml
+++ b/WebApplication1/WebApplication1/Views/Wiadomosci/Details.cshtml
@@ -4,14 +4,13 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Szczegóły</h2>
 
 <div>
-    <h4>Wiadomosci</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Tresc)
+            @Html.DisplayName("Treść")
         </dt>
 
         <dd>
@@ -19,16 +18,17 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Czytelnik.Imie)
+            @Html.DisplayName("Odbiorca")
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Czytelnik.Imie)
+            @Html.DisplayFor(model => model.Czytelnik.Imie)@:&nbsp;
+            @Html.DisplayFor(model => model.Czytelnik.Nazwisko)
         </dd>
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edytuj", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Powrót do listy", "Index")
 </p>
