--- a/WebApplication1/WebApplication1/Views/Wypozyczenia_Czasopisma/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Wypozyczenia_Czasopisma/Index.cshtml
@@ -4,21 +4,18 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Wypożyczone czasopisma</h2>
 
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Data_Wypozyczenia)
+            @Html.DisplayName("Data Wypożyczenia")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Data_Zwrotu)
+            @Html.DisplayName("Data Zwrotu")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Czasopismo.Tytul)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Czytelnik.Imie)
+            @Html.DisplayName("Tytuł")
         </th>
         <th></th>
     </tr>
@@ -34,16 +31,13 @@
         <td>
             @Html.DisplayFor(modelItem => item.Czasopismo.Tytul)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Czytelnik.Imie)
-        </td>
         @if (Session["UserID"] != null && Session["UserRole"] != null)
         {
             if (Int32.Parse(Session["UserRole"].ToString()) >= 1)
             {
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Szczegóły", "Details", new { id = item.ID }) |
             </td>
             }
         }
