--- a/WebApplication1/WebApplication1/Views/Wypozyczenia_Filmu/Edit.cshtml
+++ b/WebApplication1/WebApplication1/Views/Wypozyczenia_Filmu/Edit.cshtml
@@ -21,7 +21,7 @@
     @Html.Hidden("bstan", Model.Stan)
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Data_Zwrotu, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Data Zwrotu", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Data_Zwrotu, new { htmlAttributes = new { @class = "datafield", @type = "date" } })
             @Html.ValidationMessageFor(model => model.Data_Zwrotu, "", new { @class = "text-danger" })
@@ -44,7 +44,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Powrót do listy", "Index")
 </div>
 
 @section Scripts {
