--- a/WebApplication1/WebApplication1/Views/Wypozyczenia_Ksiazki/Details.cshtml
+++ b/WebApplication1/WebApplication1/Views/Wypozyczenia_Ksiazki/Details.cshtml
@@ -37,5 +37,5 @@
 </div>
 <p>
     @Html.ActionLink("Edytuj", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Wróć do listy", "Index")
+    @Html.ActionLink("Powrót do listy", "Index")
 </p>
