--- a/WebApplication1/WebApplication1/Views/Czytelnicy/Create.cshtml
+++ b/WebApplication1/WebApplication1/Views/Czytelnicy/Create.cshtml
@@ -56,14 +56,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Dodaj" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Wróć do listy", "Index")
+    @Html.ActionLink("Powrót do listy", "Index")
 </div>
 
 @section Scripts {
