--- a/WebApplication1/WebApplication1/Views/Czytelnicy/Delete.cshtml
+++ b/WebApplication1/WebApplication1/Views/Czytelnicy/Delete.cshtml
@@ -48,8 +48,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Wróc do listy", "Index")
+            <input type="submit" value="Usuń" class="btn btn-default" /> |
+            @Html.ActionLink("Powrót do listy", "Index")
         </div>
     }
 </div>
