--- a/WebApplication1/WebApplication1/Views/Ksiazki/Delete.cshtml
+++ b/WebApplication1/WebApplication1/Views/Ksiazki/Delete.cshtml
@@ -72,8 +72,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Usuń" class="btn btn-default" /> |
+            @Html.ActionLink("Powrót do listy", "Index")
         </div>
     }
 </div>
