--- a/WebApplication1/WebApplication1/Views/Prace_Naukowe/Delete.cshtml
+++ b/WebApplication1/WebApplication1/Views/Prace_Naukowe/Delete.cshtml
@@ -4,15 +4,14 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Usuń Pace Naukową</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Czy napewno chcesz usunąć tą pozycje?</h3>
 <div>
-    <h4>Praca_Naukowa</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Tytul)
+            @Html.DisplayName("Tytuł")
         </dt>
 
         <dd>
@@ -20,11 +19,12 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Autor.Imie)
+            @Html.DisplayName("Autor")
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Autor.Imie)
+            @Html.DisplayFor(model => model.Autor.Imie)@:&nbsp;
+            @Html.DisplayFor(model => model.Autor.Nazwisko)
         </dd>
 
     </dl>
@@ -33,8 +33,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Usuń" class="btn btn-default" /> |
+            @Html.ActionLink("Powrót do listy", "Index")
         </div>
     }
 </div>
