--- a/WebApplication1/WebApplication1/Views/Slowa_Kluczowe/Delete.cshtml
+++ b/WebApplication1/WebApplication1/Views/Slowa_Kluczowe/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Usuń słowo kluczowe</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Czy napewno chcesz usunąć tą pozycje?</h3>
 <div>
-    <h4>Slowo_Kluczowe</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -20,7 +19,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Slowo)
+            @Html.DisplayName("Słowo")
         </dt>
 
         <dd>
@@ -33,8 +32,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Usuń" class="btn btn-default" /> |
+            @Html.ActionLink("Powrót do listy", "Index")
         </div>
     }
 </div>
