--- a/WebApplication1/WebApplication1/Views/Wiadomosci/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Wiadomosci/Index.cshtml
@@ -4,18 +4,18 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Lista Wiadomości</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Utwórz nową wiadomość", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Tresc)
+            @Html.DisplayName("Treść")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Czytelnik.Imie)
+            @Html.DisplayName("Odbiorca")
         </th>
         <th></th>
     </tr>
@@ -26,10 +26,11 @@
             @Html.DisplayFor(modelItem => item.Tresc)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Czytelnik.Imie)
+            @Html.DisplayFor(modelItem => item.Czytelnik.Imie)&nbsp;
+            @Html.DisplayFor(modelItem => item.Czytelnik.Nazwisko)
         </td>
         <td>
-            @Html.ActionLink("Details", "Details", new { id=item.ID })
+            @Html.ActionLink("Szczegóły", "Details", new { id=item.ID })
         </td>
     </tr>
 }
