--- a/WebApplication1/WebApplication1/Views/Wydawcy/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Wydawcy/Index.cshtml
@@ -11,7 +11,7 @@
     if (Int32.Parse(Session["UserRole"].ToString()) >= 1)
     {
         <p>
-            @Html.ActionLink("Create New", "Create")
+            @Html.ActionLink("Dodaj nowego wydawcę", "Create")
         </p>
     }
 }
@@ -34,9 +34,9 @@
         if (Int32.Parse(Session["UserRole"].ToString()) >= 1)
         {
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                @Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Szczegóły", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Usuń", "Delete", new { id = item.ID })
             </td>
     }
 }
