--- a/WebApplication1/WebApplication1/Views/Wypozyczenia_Czasopisma/Edit.cshtml
+++ b/WebApplication1/WebApplication1/Views/Wypozyczenia_Czasopisma/Edit.cshtml
@@ -21,7 +21,7 @@
     @Html.Hidden("bstan", Model.Stan)
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Data_Zwrotu, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Data Zwrotu", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Data_Zwrotu, new { htmlAttributes = new { @class = "datafield", @type = "date" } })
 
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.Stan, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Stan", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownList("Stan", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Stan, "", new { @class = "text-danger" })
@@ -45,7 +45,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Powrót do listy", "Index")
 </div>
 
 @section Scripts {
