--- a/WebApplication1/WebApplication1/Views/Czasopisma/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Czasopisma/Index.cshtml
@@ -56,18 +56,17 @@
         </td>
         @if (Session["UserID"] != null && Session["UserRole"] != null)
     {
-        if (Int32.Parse(Session["UserRole"].ToString()) >= 1)
-        {
-            <td>
-                @Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) |
-                @Html.ActionLink("Szczegóły", "Details", new { id = item.ID }) |
-                @Html.ActionLink("Usuń", "Delete", new { id = item.ID })
-            </td>
-    }
-    else
-    {
-        <td></td>
-}
+        <td>
+            @if (Int32.Parse(Session["UserRole"].ToString()) >= 1)
+            {
+
+            @Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) @:|
+            @Html.ActionLink("Szczegóły", "Details", new { id = item.ID }) @:|
+            @Html.ActionLink("Usuń", "Delete", new { id = item.ID }) @:|
+
+            }
+            @Html.ActionLink("Dodaj do Koszyka", "Add", "Koszyk", new { id = item.ID, type = 2 }, null)
+        </td>
 }
     </tr>
     }
