--- a/WebApplication1/WebApplication1/Views/Filmy/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Filmy/Index.cshtml
@@ -45,15 +45,18 @@
 
         @if (Session["UserID"] != null && Session["UserRole"] != null)
     {
-        if (Int32.Parse(Session["UserRole"].ToString()) >= 1)
-        {
-            <td>
-                @Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) |
-                @Html.ActionLink("Szczegóły", "Details", new { id = item.ID }) |
-                @Html.ActionLink("Usuń", "Delete", new { id = item.ID })
-            </td>
-    }
-}
+        <td>
+            @if (Int32.Parse(Session["UserRole"].ToString()) >= 1)
+            {
+
+            @Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) @:|
+            @Html.ActionLink("Szczegóły", "Details", new { id = item.ID }) @:|
+            @Html.ActionLink("Usuń", "Delete", new { id = item.ID }) @:|
+
+            }
+            @Html.ActionLink("Dodaj do Koszyka", "Add", "Koszyk", new { id = item.ID, type = 1 }, null)
+        </td>
+        }
     </tr>
     }
 
