--- a/WebApplication1/WebApplication1/Views/Czytelnicy/Create.cshtml
+++ b/WebApplication1/WebApplication1/Views/Czytelnicy/Create.cshtml
@@ -51,12 +51,17 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-                @if (ViewBag.Error != null)
-                {
-                    @Html.Label((String)ViewBag.Error, new { @class = "text-danger" })
-                }
             </div>
         </div>
+
+                @if (ViewBag.Error != null)
+                {
+                    foreach (string str in ViewBag.Error)
+                    {
+                        @Html.Label(str, new { @class = "text-danger" })
+                        <br />
+                    }
+                }
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
