--- a/WebApplication1/WebApplication1/Views/Czytelnicy/Edit.cshtml
+++ b/WebApplication1/WebApplication1/Views/Czytelnicy/Edit.cshtml
@@ -54,10 +54,6 @@
         <div class="col-md-10">
             @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-            @if (ViewBag.Error != null)
-            {
-                @Html.Label((String)ViewBag.Error, new { @class = "text-danger" })
-            }
         </div>
     </div>
 
@@ -70,7 +66,7 @@
             }
             else
             {
-                @Html.CheckBoxFor(model => model.Wazne, new { htmlAttributes = new { @class = "form-control"}, disabled = "disabled" })
+                @Html.CheckBoxFor(model => model.Wazne, new { htmlAttributes = new { @class = "form-control" }, disabled = "disabled" })
             }
         </div>
     </div>
@@ -81,6 +77,16 @@
             @Html.DropDownList("RoleSelectList")
         </div>
     </div>
+
+
+    @if (ViewBag.Error != null)
+    {
+        foreach (string str in ViewBag.Error)
+        {
+            @Html.Label(str, new { @class = "text-danger" })
+            <br />
+        }
+    }
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
